--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Your Page Title</title>
+  <title>This is my project Title</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="Your name">
+  <meta name="author" content="Ryan Lee">
   <meta name="description" content="Brief description">
   <meta property="og:title" content="Your Page Title">
   <meta property="og:description" content="Brief description">
