--- a/About.html
+++ b/About.html
@@ -3,55 +3,9 @@
 <meta charset="UTF-8">
 <title>Ryan's Website</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
+<link rel="stylesheet1"  type="text/css" href="stylesheet1.css" />
 <head>
 <style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-h1 {text-align: center;}
-
-/* Style the header */
-header {
-  background-color: #666;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
-/* Style the navigation menu */
-nav {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  background: #ccc;
-  padding: 20px;
-  text-align: center;
-}
-/* Style the sections */
-section {
-  margin: 0 1.5%;
-  width: 30%;
-  text-align: center;
-  width: 300px;
-  height: 100px;
-  position: absolute;
-  left: 50%;
-  margin-left: -150px;
-  top: 50%;
-  margin-top: -50px;
-}
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 10px;
-  position: absolute;
-  right: 0;bottom:0;left:0;
-  text-align: center;
-  color: white;
-}
-
 </style>
 </head>
 
